# Reaper-Waapi-Transfer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  configure_project.py  reaper_waapi_transfer.aps  reaper_waapi_transfer.rc  resource.h
AkAutobahn/AkAutobahn/: AkJson.h  AkVariant.h  CMakeLists.txt  Client.cpp  Client.h  FutureUtils.cpp  FutureUtils.h  IWebSocketClientHandler.h  JSONHelpers.h  JsonProvider.cpp  JsonProvider.h  Logger.cpp  Logger.h  WebSocketClient.cpp  WebSocketClient.h  autobahn.cpp  autobahn.h  civetweb.cpp  file_ops.inl
ext/AkAutobahn/: CMakeLists.txt
ext/AkAutobahn/AkAutobahn/: AkAutobahnWindows_vc150.vcxproj  AkAutobahnWindows_vc150.vcxproj.filters  Client.cpp  FutureUtils.cpp  JSONHelpers.h  JsonProvider.cpp  Logger.cpp  WebSocketClient.cpp  autobahn.cpp  civetweb.cpp  file_ops.inl  handle_form.inl
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
ext/imgui/: CMakeLists.txt
include/: Reaper_WAAPI_Transfer.h  RecallWindowHandler.h  RenderQueueReader.h  SearchWindowHandler.h  TransferSearch.h  WAAPIHelpers.h  WAAPIRecall.h  WAAPITransfer.h  config.h  reaper_plugin_functions.h  types.h
include/AkAutobahn/: AkJson.h  AkVariant.h  CHANGES.txt  Client.cpp  Client.h  FutureUtils.cpp  FutureUtils.h  IWebSocketClientHandler.h  JSONHelpers.cpp  JSONHelpers.h  JsonProvider.h  Logger.cpp  Logger.h  WebSocketClient.cpp  WebSocketClient.h  autobahn.cpp  autobahn.h  civetweb.cpp  handle_form.inl
include/AkAutobahn/util/: Continuation.h  make_unique.h
reaper_waapi_transfer/: CMakeLists.txt  ImGuiHandler.cpp  ImGuiHandler.h  ImGuiWindow.h  Reaper_WAAPI_Transfer.cpp  Reaper_WAAPI_Transfer.h  RecallWindowHandler.cpp  RenderQueueReader.cpp  RenderQueueReader.h  SearchWindowHandler.cpp  TransferSearch.h  TransferWindowHandler.cpp  TransferWindowHandler.h  WAAPIHelpers.cpp  WAAPIHelpers.h  WAAPIRecall.cpp  WAAPIRecall.h  WAAPITransfer.cpp  WAAPITransfer.h  WwiseSettingsReader.cpp  WwiseSettingsReader.h  config.h  reaper_waapi_transfer.rc  resource.h  types.h
src/: Reaper_WAAPI_Transfer.cpp  RecallWindowHandler.cpp  RenderQueueReader.cpp  TransferSearch.cpp  TransferSearch.cpp~RF1ad8e20.TMP  TransferWindowHandler.cpp  WAAPIHelpers.cpp  WAAPIRecall.cpp  WAAPITransfer.cpp  WwiseSettingsReader.cpp
